[gd_scene load_steps=9 format=1]

[ext_resource path="res://Scripts/Projectiles/Thunderbolt.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Spells/Lightning/magnetBolt1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Spells/Lightning/magnetBolt2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Spells/Lightning/magnetBolt3.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]

animations = [ { "frames":[ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ], "loop":true, "name":"default", "speed":5.0 } ]

[sub_resource type="CircleShape2D" id=5]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="Animation" id=4]

resource/name = "death"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 0.262258, 0.262258 ), Vector2( 0.4, 0.4 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:visibility/self_opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }

[node name="Thunderbolt" type="KinematicBody2D"]

input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/scale = Vector2( 0.262258, 0.262258 )
frames = SubResource( 1 )
animation = "default"
frame = 1
playing = true

[node name="Damage" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 5.56227, 0, 0, 5.56227, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage"]

visibility/visible = false
transform/scale = Vector2( 5.56227, 5.56227 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="Detection" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 3.4304, 0, 0, 3.61843, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]

transform/scale = Vector2( 3.4304, 3.61843 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="DelayTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="LifeTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 10.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/death = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="body_enter" from="Detection" to="." method="_on_Detection_body_enter"]

[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]

[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]


